# autoswagger

./: pyproject.toml
