[project]
name = "autoswagger"
version = "0.1.0"
description = "Autoswagger by Intruder - detect API auth weaknesses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "colorama>=0.4.6",
    "dicttoxml>=1.7.16",
    "pandas>=2.3.1",
    "prance>=25.4.8.0",
    "presidio-analyzer>=2.2.359",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "rich>=14.1.0",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
]
